# intelligent_meal_planner

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  GEMINI.md  PROGRESS.md  README.md  WARP.md  alembic.ini  intelligent_meal_planner_proposal.md  main.py  pyproject.toml  sql_app.db  start_project.bat  start_project.sh  stop_project.sh  任务书.md  对话记录.md  模型训练目标.md  问题.md
.codex/: config.toml
.github/: copilot-instructions.md
docs/: 2026-04-04-crewai-dqn-meal-chat-overhaul-review.md  2026-04-04-immersive-meal-chat-result-flow-review.md  2026-04-04-ux-remediation-review.md  2026-04-05-meal-plan-chat-first-redesign-review.md  2026-04-05-post-debug-meal-chat-hardening-review.md  2026-04-06-weekly-plan-shopping-closure-review.md  2026-05-07-deepseek-conversation-refactor-integration-analysis.md  2026-05-07-deepseek-conversation-refactor-review.md  dqn-autoresearch-program.md  dqn-autoresearch.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
new_data_temp/: healthy_meal_plans.csv
scripts/: analyze_model_diversity.py  analyze_recipes.py  analyze_training.py  check_price_ratio.py  check_system.py  debug_crewai_llm.py  debug_llm.py  dqn_autoresearch_loop.py  dqn_autoresearch_plot.py  dqn_autoresearch_run.py  dqn_train_config.py  find_bad_recipe.py  generate_large_dataset.py  generate_new_recipes.py  generate_recipes.py  install_deps.bat  migrate_weekly_plan_sync.py  plot_thesis_graph.py  process_data.py  run_dqn_autoresearch_experiment.py  show_dietary_strategies.py  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  start_training.bat  test_crew_config.py  test_different_targets.py  test_dqn.py  test_env.py  test_model_detailed.py  thesis_plots.py  thesis_training_data.json  train_dqn_maskable.py  (+8 more)
(+204 files in other folders)
